fix bug #47220 (segfault in dom_document_parser in recovery mode)